.k8s/redis.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-routr
  labels:
    app: routr
spec:
  ports:
    - port: 6379
  selector:
    app: routr
    tier: database
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-routr
  labels:
    app: routr
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: routr
        tier: database
    spec:
      containers:
      - name: redis-routr
        image: redis:6.0.3-alpine
        ports:
         - containerPort: 6379
           name: redis-routr
