.k8s/routr.yml
apiVersion: v1
kind: Service
metadata:
  name: routr
  namespace: voip
  labels:
    app: routr
spec:
  type: NodePort
  # "Local" preserves the client source IP and avoids a second hop for
  # LoadBalancer and NodePort
  externalTrafficPolicy: Local
  ports:
  - name: sip
    port: 5060
  - name: https
    port: 4567
  selector:
    app: routr
    tier: sip
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: routr
  labels:
    app: routr
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: routr
        tier: sip
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
      - name: routr
        image: fonoster/routr:1.0.0-edge-20200607
        ports:
        - containerPort: 5060
          name: sip
        - containerPort: 4567
          name: https
        volumeMounts:
        - name: log4j2
          mountPath: /opt/routr/config/log4j2.yml
          subPath: log4j2.yml
      volumes:
      - name: log4j2
        configMap:
          name: log4j2
