.k8s/03-routr.yml
apiVersion: v1
kind: Service
metadata:
  name: routr-sip
  namespace: voip
  labels:
    app: routr
spec:
  type: NodePort
  # "Local" preserves the client source IP and avoids a second hop for
  # LoadBalancer and NodePort
  externalTrafficPolicy: Local
  ports:
  - name: sip
    port: 5060
  selector:
    app: routr
    tier: sip
---
apiVersion: v1
kind: Service
metadata:
  name: routr-rest
  namespace: voip
  labels:
    app: routr
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 4567
  selector:
    app: routr
    tier: sip
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: routr-rest
  namespace: voip
spec:
  ingressClassName: traefik
  rules:
  - host: routr-rest.tahiro.org
    http:
      paths:
      - backend:
          service:
            name: routr-rest
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: routr
  namespace: voip
  labels:
    app: routr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: routr
  template:
    metadata:
      labels:
        app: routr
        tier: sip
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
      - name: routr
        image: fonoster/routr:latest
        ports:
        - containerPort: 5060
          name: sip
        - containerPort: 4567
          name: http
        volumeMounts:
        - name: log4j2
          mountPath: /opt/routr/config/log4j2.yml
          subPath: log4j2.yml
      volumes:
      - name: log4j2
        configMap:
          name: log4j2
